--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -1,10 +1,44 @@
 .form {
   display: flex;
+  justify-content: center;
+  gap: 16px;
   width: 100%;
 }
 .input {
   max-width: 300px;
+  width: 100%;
+  padding: 8px 16px;
+  border: 1px solid #a9a9a9;
+  border-radius: 5px;
+  outline: transparent;
+}
+.input:hover {
+  border: 1px solid #000;
+}
+.input:focus {
+  border: 1px solid blue;
+  box-shadow: 8px 8px 24px 0px rgba(169, 169, 169, 1);
 }
 .searchBtn {
-  max-width: 150px;
+  max-width: 100px;
+  width: 100%;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  color: #fff;
+  background-color: rgba(169, 169, 169, 1);
+  background-image: linear-gradient(
+    180deg,
+    rgba(169, 169, 169, 1) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
+}
+.searchBtn:hover {
+  background-color: rgba(0, 0, 0, 1);
+  background-image: linear-gradient(
+    180deg,
+    rgba(0, 0, 0, 1) 0%,
+    rgba(169, 169, 169, 1) 100%
+  );
 }
