--- a/src/components/LoadMoreBtn/LoadMoreBtn.module.css
+++ b/src/components/LoadMoreBtn/LoadMoreBtn.module.css
@@ -5,19 +5,24 @@
   margin-right: auto;
   margin-top: 40px;
 
-  color: #ffffff;
-  background-color: #87cefa;
+  color: #fff;
+  background-color: rgb(135, 206, 250);
+  background-image: linear-gradient(
+    180deg,
+    rgba(135, 206, 250, 1) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
 
-  border-radius: 8px;
+  border: none;
+  border-radius: 5px;
 
-  padding: 15px 30px;
+  padding: 12px 16px;
   text-transform: uppercase;
-  font-weight: bold;
   cursor: pointer;
-  transition: box-shadow 0.25s cubic-bezier(0.7, 0.98, 0.86, 0.98);
+  transition: box-shadow 0.25s linear;
 }
 
 .button:hover,
 .button:focus {
-  box-shadow: 0 5px 7px -1px rgba(51, 51, 51, 0.23);
+  box-shadow: 0px 10px 10px 0px rgba(128, 128, 128, 1);
 }
