--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -8,7 +8,7 @@
   width: 100%;
 }
 .input {
-  max-width: 300px;
+  max-width: 220px;
   width: 100%;
   padding: 8px 16px;
   border: 1px solid #a9a9a9;
@@ -19,7 +19,7 @@
   border: 1px solid #000;
 }
 .input:focus {
-  border: 1px solid blue;
+  border: 1px solid rgba(135, 206, 250, 1);
   box-shadow: 8px 8px 24px 0px rgba(169, 169, 169, 1);
 }
 .searchBtn {
@@ -30,18 +30,14 @@
   border-radius: 5px;
   cursor: pointer;
   color: #fff;
-  background-color: rgba(169, 169, 169, 1);
+  background-color: rgb(135, 206, 250);
   background-image: linear-gradient(
     180deg,
-    rgba(169, 169, 169, 1) 0%,
+    rgba(135, 206, 250, 1) 0%,
     rgba(0, 0, 0, 1) 100%
   );
+  transition: box-shadow 0.25s linear;
 }
 .searchBtn:hover {
-  background-color: rgba(0, 0, 0, 1);
-  background-image: linear-gradient(
-    180deg,
-    rgba(0, 0, 0, 1) 0%,
-    rgba(169, 169, 169, 1) 100%
-  );
+  box-shadow: 0px 10px 10px 0px rgba(128, 128, 128, 1);
 }
